Additional setup scripts

--- a/pubchem_bioassay_sklearn.ipynb
+++ b/pubchem_bioassay_sklearn.ipynb
@@ -145,12 +145,16 @@
     "    if index % 10000 == 0:\n",
     "        print(\"Processed index: {0}\".format(index))\n",
     "\n",
-    "# Convert activities to np array of ints\n",
-    "activities = np.array(activities,dtype=int)\n",
     "fingerprints = np.array(fingerprints)\n",
+    "activities = np.array(activities,dtype=int)\n",
     "        \n",
-    "print(\"Processed all, sampling\")\n",
+    "print(\"Processed all, saving non-sampled\")\n",
     "\n",
+    "# Pickle the data to save time in the future\n",
+    "with open('data.classification.nonsampled.pickle', 'wb') as f:\n",
+    "    pickle.dump((fingerprints,activities), f, pickle.HIGHEST_PROTOCOL)\n",
+    "    \n",
+    "print(\"Sampling\")\n",
     "\n",
     "rus = RandomUnderSampler(random_state=global_random_state)\n",
     "X, y = rus.fit_sample(fingerprints, activities)\n",
@@ -380,7 +384,7 @@
     "# Let's try using a hyperparameter tuning package\n",
     "from hpsklearn import HyperoptEstimator\n",
     "\n",
-    "estim = HyperoptEstimator()\n",
+    "estim = HyperoptEstimator(trial_timeout=300, classifier=any_classifier('clf'))\n",
     "\n",
     "# Search the space of classifiers and preprocessing steps and their\n",
     "# respective hyperparameters in sklearn to fit a model to the data\n",
