--- a/pubchem_regression.ipynb
+++ b/pubchem_regression.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,28 @@
       "Processed index: 80000\n",
       "Processed index: 90000\n",
       "Processed index: 100000\n",
-      "Processed index: 110000\n"
+      "Processed index: 110000\n",
+      "Processed index: 120000\n",
+      "Processed index: 130000\n",
+      "Processed index: 140000\n",
+      "Processed index: 150000\n",
+      "Processed index: 160000\n",
+      "Processed index: 170000\n",
+      "Processed index: 180000\n",
+      "Processed index: 190000\n",
+      "Processed index: 200000\n",
+      "Processed index: 210000\n",
+      "Molecule failed featurization\n",
+      "218052\n",
+      "Processed index: 220000\n",
+      "[[ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " ..., \n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  1.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  1.  0. ...,  0.  0.  0.]]\n",
+      "[ 0.1  0.   0.   0.   0.   0.   0.   0.   0.2  0. ]\n"
      ]
     }
    ],
@@ -150,9 +171,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully loaded 220364 compounds.\n",
+      "[[ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  1. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " ..., \n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  1.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  1. ...,  0.  0.  0.]]\n",
+      "[ 0.   0.   0.   0.   0.2  0.   0.1  0.   0.   0.1]\n",
+      "Computed mse score of: 0.03150658092444017\n",
+      "[False False False False False  True False  True False False False False\n",
+      " False False False False False False False False  True False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False  True False False False False False False\n",
+      " False  True False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False  True False False False False False False False\n",
+      " False False False False]\n",
+      "[False False False False False False False False False False False False\n",
+      " False False False False False False False False  True False False False\n",
+      " False False  True False  True False False False False False False False\n",
+      " False False False False False  True False False False False False False\n",
+      " False  True False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      "  True False False False  True False False False False False False False\n",
+      " False False False False]\n",
+      "How good is it as a classifier?\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.95      0.95      0.95    103101\n",
+      "       True       0.28      0.26      0.27      7081\n",
+      "\n",
+      "avg / total       0.91      0.91      0.91    110182\n",
+      "\n",
+      "[[ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  1.  0. ...,  0.  0.  0.]\n",
+      " ..., \n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  1.  0. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]]\n",
+      "[ 0.1  0.   0.   0.   0.1  0.1  0.   0.   0.   0. ]\n",
+      "Computed mse score of: 0.03143266718303952\n",
+      "[False False False False False False  True False False False False False\n",
+      " False False False False False False False False False False  True False\n",
+      " False False False False False False False False  True False False False\n",
+      " False False False False False False False False False  True False False\n",
+      " False False False  True False False False False False False False False\n",
+      " False  True False False False False False False False False False False\n",
+      "  True False False False False False False False False False False False\n",
+      " False False False False False False False False False False False False\n",
+      "  True False False False]\n",
+      "[False False False False False False False False False False False False\n",
+      " False False False False False False False False  True False False False\n",
+      " False False False False False False False False  True False False False\n",
+      " False False  True False  True False False False False False False False\n",
+      " False False False  True False False False False False False False False\n",
+      " False False False False False False False False False  True False False\n",
+      " False False  True  True False False False False False False False False\n",
+      " False False False False  True False False False False False False False\n",
+      " False False False False]\n",
+      "How good is it as a classifier?\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "      False       0.95      0.96      0.95    103047\n",
+      "       True       0.28      0.24      0.26      7135\n",
+      "\n",
+      "avg / total       0.90      0.91      0.91    110182\n",
+      "\n",
+      "Average mse score is: 0.03146962405373985\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -201,16 +301,12 @@
     "    X_test = X[test_index]\n",
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
-    "    \n",
-    "    print(X_train[0:10])\n",
-    "    print(y_train[0:10])\n",
     "\n",
     "    classifier = DecisionTreeRegressor(random_state=global_random_state)\n",
     "    classifier.fit(X_train,y_train)\n",
     "    y_pred = classifier.predict(X_test)\n",
     "    mse = mean_squared_error(y_test, y_pred)\n",
     "    print(\"Computed mse score of: {}\".format(mse))\n",
-    "    print(classification_report(y_test, y_pred))\n",
     "    mse_avg = mse_avg + mse\n",
     "    \n",
     "    y_pred_binary = y_pred > .4\n",
@@ -259,10 +355,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      " 19017/110182 [====>.........................] - ETA: 461s - loss: 0.0244 - mean_absolute_error: 0.0945"
+     ]
+    }
+   ],
    "source": [
     "# What about a deep neural network?\n",
     "# Sample code from: https://machinelearningmastery.com/tutorial-first-neural-network-python-keras/\n",
@@ -270,33 +373,52 @@
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
     "from keras import metrics\n",
-    "from keras.wrappers.scikit_learn import KerasClassifier\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
+    "from keras.wrappers.scikit_learn import KerasRegressor\n",
+    "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import f1_score, classification_report\n",
+    "\n",
+    "kf = KFold(n_splits=k_fold_splits,shuffle=True,random_state=global_random_state)\n",
     "\n",
     "\n",
     "global_random_state = 42\n",
     "\n",
     "with open('data.regression.undersampled.pickle', 'rb') as f:\n",
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
-    "    (compound_ids, smiles_list, fingerprints, activities) = pickle.load(f)\n",
+    "    (X,y) = pickle.load(f)\n",
     "\n",
     "def create_model() :\n",
     "    model = Sequential()\n",
     "    model.add(Dense(12, input_dim=2048, activation='relu'))\n",
     "    model.add(Dense(8, activation='relu'))\n",
     "    model.add(Dense(1, activation='sigmoid'))\n",
-    "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[metrics.binary_accuracy])\n",
+    "    model.compile(loss='mean_squared_error', optimizer='adam', metrics=[\"mae\"])\n",
     "    return model\n",
     "\n",
-    "model = KerasClassifier(build_fn=create_model, epochs=10, batch_size=1, verbose=1)\n",
-    "kfold = StratifiedKFold(n_splits=k_fold_splits, shuffle=True, random_state=global_random_state)\n",
-    "results = cross_val_score(model, fingerprints, activities, cv=k_fold_splits)\n",
-    "print(results.mean())\n",
+    "f1_score_avg = 0\n",
     "\n",
-    "y_pred = cross_val_predict(classifier, fingerprints, activities, cv=k_fold_splits)\n",
+    "for train_index, test_index in kf.split(X,y) :\n",
     "\n",
-    "print(classification_report(activities, y_pred))"
+    "    X_train = X[train_index]\n",
+    "    X_test = X[test_index]\n",
+    "    y_train = y[train_index]\n",
+    "    y_test = y[test_index]\n",
+    "\n",
+    "    model = KerasRegressor(build_fn=create_model, epochs=1, batch_size=1, verbose=1)\n",
+    "    model.fit(X_train,y_train)\n",
+    "    y_pred = classifier.model(X_test)\n",
+    "    y_pred_binarized = y_pred[0:] >= .4\n",
+    "    y_test_binarized = y_test[0:] >= .4\n",
+    "    fscore = f1_score(y_pred_binarized,y_test_binarized)\n",
+    "    print(\"When using regressor as an active/inactive classifier, f1 score of: {}\".format(fscore))\n",
+    "    f1_score_avg = f1_score_avg + fscore\n",
+    "    print(classification_report(y_test_binarized,y_pred_binarized))\n",
+    "\n",
+    "    \n",
+    "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
+    "f1_score_avg = f1_score_avg / k_fold_splits\n",
+    "print(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
+    "print(\"Average f1_score is: {}\".format(f1_score_avg))\n"
    ]
   },
   {
