--- a/pubchem_dnn.ipynb
+++ b/pubchem_dnn.ipynb
@@ -192,38 +192,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n",
-      "16110/16110 [==============================] - 90s - loss: 0.6471 - acc: 0.6318    \n",
-      "Epoch 2/3\n",
-      "16110/16110 [==============================] - 89s - loss: 0.5580 - acc: 0.7228    \n",
-      "Epoch 3/3\n",
-      "16110/16110 [==============================] - 91s - loss: 0.4350 - acc: 0.8060    \n",
-      "16062/16112 [============================>.] - ETA: 0sComputed roc_auc score of: 0.6903550148957299\n",
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "          0       0.68      0.73      0.70      8056\n",
-      "          1       0.71      0.65      0.68      8056\n",
-      "\n",
-      "avg / total       0.69      0.69      0.69     16112\n",
-      "\n",
-      "When using regressor as an active/inactive classifier, f1 score of: 0.6786887357506279\n",
-      "Epoch 1/3\n",
-      "15015/16112 [==========================>...] - ETA: 6s - loss: 0.6493 - acc: 0.6322"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# What about a deep neural network?\n",
-    "# Sample code from: https://machinelearningmastery.com/tutorial-first-neural-network-python-keras/\n",
+    "# Load assay info. Note: This CSV was obtained from PubChem bioassay aka PCBA, via searching for AID 1030 \n",
+    "# and downloading the datatable\n",
     "\n",
-    "# What about a deep neural network?\n",
-    "# Sample code from: https://machinelearningmastery.com/tutorial-first-neural-network-python-keras/\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from rdkit import Chem, DataStructs\n",
+    "from rdkit.Chem import AllChem, rdMolDescriptors\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from imblearn.under_sampling import RandomUnderSampler\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "ba_df = pd.read_csv(\"AID_1030_datatable_all.csv\")\n",
+    "\n",
+    "# Load compound info\n",
+    "cs_df = pd.read_csv(\"AID_1030_compound_smiles.csv\",sep='\\t',header=0)\n",
+    "\n",
+    "# Merge the two\n",
+    "full_df = ba_df.merge(cs_df,on='PUBCHEM_CID')\n",
+    "\n",
+    "# Cleanup the compound ID column\n",
+    "full_df[\"PUBCHEM_CID\"] = full_df[\"PUBCHEM_CID\"].astype(int)\n",
+    "\n",
+    "# Delete CID 3246048, which fails featurization\n",
+    "\n",
+    "compound_ids = list()\n",
+    "smiles_list = list()\n",
+    "fingerprints = list()\n",
+    "activities = list()\n",
+    "\n",
+    "#fingerprint_df = \n",
+    "\n",
+    "for index, row in full_df.iterrows() :\n",
+    "    cid = row[\"PUBCHEM_CID\"]\n",
+    "    smiles_string = row[\"Smiles\"]\n",
+    "    mol = Chem.MolFromSmiles(smiles_string)\n",
+    "    is_active = row[\"PUBCHEM_ACTIVITY_OUTCOME\"] == \"Active\"\n",
+    "    if mol is None:\n",
+    "        print(\"Molecule failed featurization\")\n",
+    "        print(index)\n",
+    "    else: \n",
+    "        fingerprint = rdMolDescriptors.GetMorganFingerprintAsBitVect(mol,2,nBits=2048,useChirality=False,\n",
+    "                                                                     useBondTypes=False,useFeatures=False)\n",
+    "        \n",
+    "        # From RDKit documentation\n",
+    "        arr = np.zeros((1,))\n",
+    "        DataStructs.ConvertToNumpyArray(fingerprint, arr)\n",
+    "        fingerprint = arr\n",
+    "        \n",
+    "        compound_ids.append(cid)\n",
+    "        smiles_list.append(smiles_string)\n",
+    "        fingerprints.append(fingerprint)\n",
+    "        activities.append(is_active)\n",
+    "    \n",
+    "    if index % 10000 == 0:\n",
+    "        print(\"Processed index: {0}\".format(index))\n",
+    "\n",
+    "fingerprints = np.array(fingerprints)\n",
+    "activities = np.array(activities,dtype=int)\n",
+    "        \n",
+    "print(\"Processed all, saving non-sampled\")\n",
+    "\n",
+    "# Pickle the data to save time in the future\n",
+    "with open('data.classification.nonsampled.pickle', 'wb') as f:\n",
+    "    pickle.dump((fingerprints,activities), f, pickle.HIGHEST_PROTOCOL)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Let's try using weights on the full non-sampled dataset\n",
     "\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense\n",
@@ -238,15 +289,14 @@
     "k_fold_splits = 2\n",
     "global_random_state = 42\n",
     "\n",
-    "with open('data.classification.undersampled.pickle', 'rb') as f:\n",
+    "with open('data.classification.nonsampled.pickle', 'rb') as f:\n",
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
     "    (X, y) = pickle.load(f)\n",
     "\n",
     "def create_model() :\n",
     "    model = Sequential()\n",
-    "    model.add(Dense(512, input_dim=2048, activation='relu'))\n",
-    "    model.add(Dense(256, activation='relu'))\n",
-    "    model.add(Dense(128, activation='relu'))\n",
+    "    model.add(Dense(12, input_dim=2048, activation='relu'))\n",
+    "    model.add(Dense(8, activation='relu'))\n",
     "    model.add(Dense(1, activation='sigmoid'))\n",
     "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=[\"accuracy\"])\n",
     "    return model\n",
@@ -263,7 +313,7 @@
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
     "\n",
-    "    classifier = KerasClassifier(build_fn=create_model, epochs=3, batch_size=1, verbose=1)\n",
+    "    classifier = KerasClassifier(build_fn=create_model, epochs=3, batch_size=1, verbose=1,class_weight=class_weights)\n",
     "    classifier.fit(X_train,y_train)\n",
     "    y_pred = classifier.predict(X_test)\n",
     "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
@@ -283,21 +333,6 @@
     "f1_score_avg = f1_score_avg / k_fold_splits\n",
     "print(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
     "print(\"Average f1_score is: {}\".format(f1_score_average))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from keras.models import load_model\n",
-    "model_large = load_model(\"pcba_1030_large_nn.h5\")\n",
-    "y_pred = model_large.predict_on_batch(X_test)\n",
-    "y_pred_binarized = y_pred[0:] > .5\n",
-    "print(classification_report(y_test, y_pred_binarized))"
    ]
   }
  ],
