Added new notebooks

--- a/pubchem_bioassay_weighted.ipynb
+++ b/pubchem_bioassay_weighted.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -51,109 +51,41 @@
     "\n",
     "import logging\n",
     "logger = logging.getLogger()\n",
-    "logger.setLevel(logging.INFO)\n",
+    "logger.setLevel(logging.DEBUG)\n",
     "\n",
     "formatter = logging.Formatter('%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
-    "fh = logging.FileHandler('log_sklearn.txt')\n",
-    "fh.setLevel(logging.INFO)\n",
+    "class_weights: { 0: .1, 1: .9}\n",
+    "\n",
+    "fh = logging.FileHandler('log_sklearn_weighted.txt')\n",
+    "fh.setLevel(logging.DEBUG)\n",
     "fh.setFormatter(formatter)\n",
     "logger.addHandler(fh)\n",
     "\n",
     "ch = logging.StreamHandler()\n",
-    "ch.setLevel(logging.INFO)\n",
+    "ch.setLevel(logging.DEBUG)\n",
     "ch.setFormatter(formatter)\n",
     "logger.addHandler(ch)\n",
-    "\n",
-    "class_weights = None\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Load assay info. Note: This CSV was obtained from PubChem bioassay aka PCBA, via searching for AID 1030 \n",
-    "# and downloading the datatable\n",
-    "\n",
-    "ba_df = pd.read_csv(\"AID_1030_datatable_all.csv\")\n",
-    "\n",
-    "# Load compound info\n",
-    "cs_df = pd.read_csv(\"AID_1030_compound_smiles.csv\",sep='\\t',header=0)\n",
-    "\n",
-    "# Merge the two\n",
-    "full_df = ba_df.merge(cs_df,on='PUBCHEM_CID')\n",
-    "\n",
-    "# Cleanup the compound ID column\n",
-    "full_df[\"PUBCHEM_CID\"] = full_df[\"PUBCHEM_CID\"].astype(int)\n",
-    "\n",
-    "# Delete CID 3246048, which fails featurization\n",
-    "\n",
-    "compound_ids = list()\n",
-    "smiles_list = list()\n",
-    "fingerprints = list()\n",
-    "activities = list()\n",
-    "\n",
-    "#fingerprint_df = \n",
-    "\n",
-    "for index, row in full_df.iterrows() :\n",
-    "    cid = row[\"PUBCHEM_CID\"]\n",
-    "    smiles_string = row[\"Smiles\"]\n",
-    "    mol = Chem.MolFromSmiles(smiles_string)\n",
-    "    is_active = row[\"PUBCHEM_ACTIVITY_OUTCOME\"] == \"Active\"\n",
-    "    if mol is None:\n",
-    "        logger.debug(\"Molecule failed featurization\")\n",
-    "        logger.debug(index)\n",
-    "    else: \n",
-    "        fingerprint = rdMolDescriptors.GetMorganFingerprintAsBitVect(mol,2,nBits=2048,useChirality=False,\n",
-    "                                                                     useBondTypes=False,useFeatures=False)\n",
-    "        \n",
-    "        # From RDKit documentation\n",
-    "        arr = np.zeros((1,))\n",
-    "        DataStructs.ConvertToNumpyArray(fingerprint, arr)\n",
-    "        fingerprint = arr\n",
-    "        \n",
-    "        compound_ids.append(cid)\n",
-    "        smiles_list.append(smiles_string)\n",
-    "        fingerprints.append(fingerprint)\n",
-    "        activities.append(is_active)\n",
-    "    \n",
-    "    if index % 10000 == 0:\n",
-    "        logger.debug(\"Processed index: {0}\".format(index))\n",
-    "\n",
-    "fingerprints = np.array(fingerprints)\n",
-    "activities = np.array(activities,dtype=int)\n",
-    "        \n",
-    "logger.debug(\"Processed all, saving non-sampled\")\n",
-    "\n",
-    "# Pickle the data to save time in the future\n",
-    "with open('data.classification.nonsampled.pickle', 'wb') as f:\n",
-    "    pickle.dump((fingerprints,activities), f, pickle.HIGHEST_PROTOCOL)\n",
-    "    \n",
-    "logger.debug(\"Sampling\")\n",
-    "\n",
-    "rus = RandomUnderSampler(random_state=global_random_state)\n",
-    "X, y = rus.fit_sample(fingerprints, activities)\n",
-    "\n",
-    "logger.debug(\"Processed all, pickling\")\n",
-    "\n",
-    "#compound_ids_and_features = (compound_ids, smiles_list, fingerprints, activities)\n",
-    "\n",
-    "# Pickle the data to save time in the future\n",
-    "with open('data.classification.undersampled.pickle', 'wb') as f:\n",
-    "    pickle.dump((X,y), f, pickle.HIGHEST_PROTOCOL)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MemoryError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-cfc1ea32d205>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data.classification.nonsampled.pickle'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;31m# Pickle the 'data' dictionary using the highest protocol available.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mMemoryError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Setup imports\n",
     "\n",
@@ -173,7 +105,7 @@
     "\n",
     "global_random_state = 42\n",
     "\n",
-    "with open('data.classification.undersampled.pickle', 'rb') as f:\n",
+    "with open('data.classification.nonsampled.pickle', 'rb') as f:\n",
     "    # Pickle the 'data' dictionary using the highest protocol available.\n",
     "    (X, y) = pickle.load(f)\n"
    ]
@@ -181,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "skf = StratifiedKFold(n_splits=k_fold_splits,shuffle=True, random_state=global_random_state)\n",
@@ -201,13 +131,13 @@
     "    classifier = DecisionTreeClassifier(random_state=global_random_state,class_weight=class_weights)\n",
     "    classifier.fit(X_train,y_train)\n",
     "    y_pred = classifier.predict(X_test)\n",
-    "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
-    "    logger.debug(\"Computed roc_auc score of: {}\".format(auc))\n",
-    "    logger.debug(classification_report(y_test, y_pred))\n",
+    "    auc = roc_auc_score(y_test, y_pred, average='weighted', sample_weight=None)\n",
+    "    logger.info(\"Computed roc_auc score of: {}\".format(auc))\n",
+    "    logger.info(classification_report(y_test, y_pred))\n",
     "    roc_auc_avg = roc_auc_avg + auc\n",
     "    \n",
     "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
-    "logger.debug(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
+    "logger.info(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
     "\n",
     "\n",
     "# Note: Unfortunately it's not directly comparable to ROC_AUC calculated in MoleculeNet at: https://arxiv.org/pdf/1703.00564.pdf \n",
@@ -238,16 +168,16 @@
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
     "\n",
-    "    classifier = MLPClassifier(random_state=global_random_state)\n",
+    "    classifier = MLPClassifier(random_state=global_random_state,class_weight=class_weights)\n",
     "    classifier.fit(X_train,y_train)\n",
     "    y_pred = classifier.predict(X_test)\n",
-    "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
-    "    logger.debug(\"Computed roc_auc score of: {}\".format(auc))\n",
-    "    logger.debug(classification_report(y_test, y_pred))\n",
+    "    auc = roc_auc_score(y_test, y_pred, average='weighted', sample_weight=None)\n",
+    "    logger.info(\"Computed roc_auc score of: {}\".format(auc))\n",
+    "    logger.info(classification_report(y_test, y_pred))\n",
     "    roc_auc_avg = roc_auc_avg + auc\n",
     "    \n",
     "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
-    "logger.debug(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
+    "logger.info(\"Average roc_auc score is: {}\".format(roc_auc_avg))\n",
     "\n"
    ]
   },
@@ -273,16 +203,16 @@
     "    y_train = y[train_index]\n",
     "    y_test = y[test_index]\n",
     "\n",
-    "    classifier = RandomForestClassifier(n_estimators=100, random_state=global_random_state, n_jobs=-1)\n",
+    "    classifier = RandomForestClassifier(n_estimators=100, class_weight=class_weights, random_state=global_random_state, n_jobs=-1)\n",
     "    classifier.fit(X_train,y_train)\n",
     "    y_pred = classifier.predict(X_test)\n",
-    "    auc = roc_auc_score(y_test, y_pred, average='macro', sample_weight=None)\n",
-    "    logger.debug(\"Computed roc_auc score of: {}\".format(auc))\n",
-    "    logger.debug(classification_report(y_test, y_pred))\n",
+    "    auc = roc_auc_score(y_test, y_pred, average='weighted', sample_weight=None)\n",
+    "    logger.info(\"Computed roc_auc score of: {}\".format(auc))\n",
+    "    logger.info(classification_report(y_test, y_pred))\n",
     "    roc_auc_avg = roc_auc_avg + auc\n",
     "    \n",
     "roc_auc_avg = roc_auc_avg / k_fold_splits\n",
-    "logger.debug(\"Average roc_auc score is: {}\".format(roc_auc_avg))"
+    "logger.info(\"Average roc_auc score is: {}\".format(roc_auc_avg))"
    ]
   },
   {
@@ -292,35 +222,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "# Let's try using a hyperparameter tuning package\n",
-    "from hpsklearn import HyperoptEstimator, any_classifier\n",
-    "from hyperopt import tpe\n",
-    "\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.33,random_state=global_random_state)\n",
-    "\n",
-    "estim = HyperoptEstimator( classifier=any_classifier('clf'),  \n",
-    "                            algo=tpe.suggest, trial_timeout=300)\n",
-    "\n",
-    "# Search the space of classifiers and preprocessing steps and their\n",
-    "# respective hyperparameters in sklearn to fit a model to the data\n",
-    "estim.fit( X_train, y_train )\n",
-    "\n",
-    "# Make a prediction using the optimized model\n",
-    "test_label = estim.predict( X_test )\n",
-    "\n",
-    "# Report the accuracy of the classifier on a given set of data\n",
-    "score = estim.score( X_test, test_label )\n",
-    "\n",
-    "# Return instances of the classifier and preprocessing steps\n",
-    "model = estim.best_model()\n",
-    "\n",
-    "estim.fit( X_train, y_train )\n",
-    "\n",
-    "logger.debug(estim.score(X_test, y_test))\n",
-    "logger.debug(estim.best_model())"
-   ]
+   "source": []
   }
  ],
  "metadata": {
